Add details on how to use the REPL